# ph_address_matching_pipeline

./: .gitignore  README.md  find_matcher.py  main.py  pyproject.toml  requirements.txt
address_matching/archive/: p6 6.ipynb
address_matching/archive/dictionary/: dictionary.json  ph_area_dictionary_v2.json  qa.ipynb
address_matching/archive/output/: (draft)valid_ps_address.xlsx  combined_addresses.xlsx  combined_addresses_single.xlsx
address_matching/archive/output/combined/: combined_addresses_20260414.xlsx
address_matching/archive/output/invalid/: invalid_20260420.xlsx  invalid_20260421_part1.xlsx  invalid_20260421_part2.xlsx  invalid_addresses.xlsx  invalid_addresses_20260414.xlsx  invalid_addresses_20260415.xlsx  invalid_addresses_20260416.xlsx  (+4 more)
address_matching/archive/sample/: QA 2nd File Completed 4-27-2026.xlsx  Structured_Philippine_Addresses_Unmatched.xlsx  copy_ps_address_v3.xlsx  ps_address_27k.xlsx  ps_address_v3.csv  ps_address_v3.xlsx  sample_address.xlsx  verified_addresses.xlsx
address_matching/notebooks/: checking 2.ipynb  p7.ipynb  ph_address_pipeline(fzymch).ipynb  ph_address_pipeline.ipynb
address_matching/notebooks/drafts/: Copy_of_p1.ipynb  cleaned_output_v2.xlsx  draft_1.ipynb  draft_10.ipynb  draft_11 (41726).ipynb  draft_11.ipynb  draft_12.ipynb  draft_2(regex ver).ipynb  draft_2.ipynb  draft_3.ipynb  draft_5.ipynb  draft_6.ipynb  draft_7.ipynb  draft_8 (41026).ipynb  draft_9 (41526).ipynb  normalized_addresses.csv  p3.ipynb  p4.ipynb
address_matching/scripts/: combine_batches.py  combine_hierarchical_match.py  xlsx_slicer.py
(+169 files in other folders)
